--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@fortawesome/react-native-fontawesome": "^0.2.4",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
@@ -26,8 +30,10 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.8.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.7"
   },
@@ -35,6 +41,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.61.23",
+    "@types/react-native-vector-icons": "^6.4.5",
     "babel-preset-expo": "^8.1.0",
     "jest-expo": "^37.0.0",
     "typescript": "^3.8.3"
