--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-dropdown": "^0.7.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
@@ -47,6 +48,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.61.23",
+    "@types/react-native-modal-dropdown": "^0.7.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "babel-preset-expo": "^8.1.0",
     "jest-expo": "^37.0.0",
