--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.8.1",
